adding exported models. making changes to naming conventions.

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ imbalanced-learn = "*"
 jupyter = "*"
 statsmodels = "*"
 yellowbrick = "*"
+joblib = "*"
+shap = "*"
+mlxtend = "*"
 
 [dev-packages]
 
